SmartUV wrong aspect ratio projection on non square images #42859

Closed
opened 2014-12-09 21:09:31 +01:00 by Riccardo Giovanetti · 5 comments

System Information
Mobile Intel Core i7 720QM (1.66GHz), Win7 Pro 64bit, 8GB RAM, NVIDIA GTS 360M with 1GB VRAM

Blender Version
Broken: Blender 2.72.3 64bit (Hash: 690345a) (blender-2.72-690345a-win64.zip) from b.b.o.
Worked: I don't know (tested back to 2.62 and I get the same behaviour)

Short description of error
SmartUV projection on a non square image stretches the UV islands proportional to the image's aspect ratio.

Exact steps for others to reproduce the error
I am not sure if the SmartUV projection is intended to be used only with square images, in that case it works fine and shame on me. Sorry.

Anyway, here are the steps:

  • Open Blender
  • enable factory settings
  • split the screen to add the UV/Image Editor
  • in the Image Editor create a new non square image (eg. 1024 x 512)
  • select the default cube
  • assign and properly map (UV coord) the above image to the default material on the default cube
  • unwrap the cube with SmartUV Project

You should notice that instead of squares the UV islands are rectangles whose aspect ratio is apparently driven by the associated image's aspect ratio.
While in other UV modes there is a checkbox named Correct Aspect which helps when dealing with non square images, with SmartUV this option seems not to be available (or applicable?).

A similar bug report, perhaps related to the above, might be #39601.

Thanks

**System Information** Mobile Intel Core i7 720QM (1.66GHz), Win7 Pro 64bit, 8GB RAM, NVIDIA GTS 360M with 1GB VRAM **Blender Version** Broken: Blender 2.72.3 64bit (Hash: 690345a) (blender-2.72-690345a-win64.zip) from b.b.o. Worked: I don't know (tested back to 2.62 and I get the same behaviour) **Short description of error** SmartUV projection on a non square image stretches the UV islands proportional to the image's aspect ratio. **Exact steps for others to reproduce the error** I am not sure if the SmartUV projection is intended to be used only with square images, in that case it works fine and shame on me. Sorry. Anyway, here are the steps: - Open Blender - enable factory settings - split the screen to add the UV/Image Editor - in the Image Editor create a new non square image (eg. 1024 x 512) - select the default cube - assign and properly map (UV coord) the above image to the default material on the default cube - unwrap the cube with SmartUV Project You should notice that instead of squares the UV islands are rectangles whose aspect ratio is apparently driven by the associated image's aspect ratio. While in other UV modes there is a checkbox named Correct Aspect which helps when dealing with non square images, with SmartUV this option seems not to be available (or applicable?). A similar bug report, perhaps related to the above, might be #39601. Thanks

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @Harvester

Added subscriber: @Harvester

This issue was referenced by f1ddf99580

This issue was referenced by f1ddf99580bf686d4f81e95191dfa0b8d6a717f5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit f1ddf99580.

Closed by commit f1ddf99580.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42859
No description provided.